--- a/WhiteHatSec.Localization.Culture/Resource/MessageLog.de.resx
+++ b/WhiteHatSec.Localization.Culture/Resource/MessageLog.de.resx
@@ -210,4 +210,7 @@
   <data name="VulnsFound" xml:space="preserve">
     <value>Sicherheitslücke gefunden</value>
   </data>
+  <data name="EmptyorInvalidUrl" xml:space="preserve">
+    <value>URL ist leer oder ungültig</value>
+  </data>
 </root>
