--- a/WhiteHatSec.Localization.Culture/Resource/MessageLog.resx
+++ b/WhiteHatSec.Localization.Culture/Resource/MessageLog.resx
@@ -210,4 +210,7 @@
   <data name="VulnsFound" xml:space="preserve">
     <value>vulns found</value>
   </data>
+  <data name="EmptyorInvalidUrl" xml:space="preserve">
+    <value>Url is empty or Invalid</value>
+  </data>
 </root>
