--- a/WhiteHatSec.Localization.Culture/Resource/MessageLog.ja.resx
+++ b/WhiteHatSec.Localization.Culture/Resource/MessageLog.ja.resx
@@ -210,6 +210,9 @@
   <data name="VulnsFound" xml:space="preserve">
     <value>脆弱性が見つかりました</value>
   </data>
+  <data name="Manage Vulnerabilities" xml:space="preserve">
+    <value>脆弱性を管理する</value>
+  </data>
   <data name="EmptyorInvalidUrl" xml:space="preserve">
     <value>URLが空または無効です</value>
   </data>
