localization-label-changes resolved-sorting-issue-in-rating-in-vuln-grid.

--- a/WhiteHatSec.VSIX/UserControls/WhsMainWindow.de.resx
+++ b/WhiteHatSec.VSIX/UserControls/WhsMainWindow.de.resx
@@ -249,7 +249,7 @@
     <value>Whitehat</value>
   </data>
   <data name="whsFindingTabPage.Text" xml:space="preserve">
-    <value>WhiteHat Findings</value>
+    <value>Debug-Sicherheitslücken</value>
   </data>
   <data name="WHSMenuStrip.Text" xml:space="preserve">
     <value>Kontextmenü-Streifen</value>
